fixes bug 337824 "Mac OSX event processing problems related to threadmanager landing (Profile Manager completely horked)" patch and reviews by darin and mark respectively