widget/src/cocoa/nsAppShell.h
@@ -68,6 +68,8 @@ protected:
 
   NSPort*            mPort;
   AppShellDelegate*  mDelegate;
+
+  PRPackedBool       mRunningEventLoop;
 };
 
 #endif // nsAppShell_h__
